--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>YS Builders Construction Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
-
+    <meta content="YS Builders Construction Company" name="keywords" />
+    <meta content="YS Builders Construction Company" name="description" />
+    
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
