--- a/index.html
+++ b/index.html
@@ -428,10 +428,10 @@
           </div>
         </div>
       </div>
-      <div class="text-center mx-auto py-5" style="max-width: 300px">
+      <div class="text-center mx-auto" style="max-width: 500px">
         <a
-          href="about.html"
-          class="nav-item nav-link btn btn-primary px-5 ms-3 d-none d-lg-block"
+          href="project.html"
+          class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block"
           >View All Team Members<i class="bi bi-arrow-right"></i
         ></a>
       </div>
