--- a/about.html
+++ b/about.html
@@ -421,6 +421,48 @@
             </a>
           </div>
         </div>
+        <div class="col-lg-6 col-md-6 portfolio-item">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/award/award-9.jpg"
+              alt=""
+              style="min-height: 340px; max-height: 500px;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/award/award-9.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 portfolio-item">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/award/award-10.jpg"
+              alt=""
+              style="min-height: 340px; max-height: 500px;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/award/award-10.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
         
       </div>
     </div>
