--- a/contact.html
+++ b/contact.html
@@ -298,87 +298,33 @@
       </div>
     </section>
 
-    <!-- Footer Start -->
-    <div
-      class="footer container-fluid position-relative bg-dark text-white-50 py-6 px-5"
-    >
+     <!-- Location Start -->
+     <div class="container-fluid bg-light overflow-hidden py-2 px-lg-0">
       <div class="row g-5">
-        <div class="col-lg-6 pe-lg-5">
-          <a href="index.html" class="navbar-brand">
-            <h1 class="m-0 display-4">
-              <img
-                style="height: 300px"
-                src="img/footer-logo.png"
-                alt="Y.S. Builders Footer Logo"
-              />
-            </h1>
-            <!-- <h1 class="m-0 display-4 text-white text-uppercase"><i class="bi bi-building text-primary me-2"></i>YS Builders</h1> -->
-          </a>
-          <!-- <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href="#"><i class="fab fa-instagram"></i></a>
-                </div> -->
-        </div>
-        <div class="col-lg-6 ps-lg-5">
-          <div class="row g-5">
-            <div class="col-sm-6">
-              <h4 class="text-white text-uppercase mb-4">Quick Links</h4>
-              <div class="d-flex flex-column justify-content-start">
-                <a class="text-white mb-2" href="index.html"
-                  ><i class="fa fa-angle-right me-2"></i>Home</a
-                >
-                <a class="text-white mb-2" href="about.html"
-                  ><i class="fa fa-angle-right me-2"></i>About Us</a
-                >
-                <a class="text-white mb-2" href="service.html"
-                  ><i class="fa fa-angle-right me-2"></i>Our Services</a
-                >
-                <a class="text-white mb-2" href="project.html"
-                  ><i class="fa fa-angle-right me-2"></i>Our Portfolio</a
-                >
-                <a class="text-white mb-2" href="blog.html"
-                  ><i class="fa fa-angle-right me-2"></i>Blog</a
-                >
-                <a class="text-white" href="contact.html"
-                  ><i class="fa fa-angle-right me-2"></i>Contact Us</a
-                >
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <h4 class="text-white text-uppercase mb-4">Locations</h4>
-              <div class="d-flex flex-column justify-content-start text-white">
-                <p>
-                  <i class="fa fa-map-marker-alt me-2 text-white"></i
-                  ><a
-                    href="https://maps.app.goo.gl/2jRuVAPdA3SXr8KA9"
-                    target="_blank"
-                    >Kupondole, Lalitpur, Nepal</a
-                  >
-                </p>
-                <p>
-                  <i class="fa fa-phone-alt me-2 text-white"></i
-                  ><a href="tel://+9779860915451">+977 9860915451</a>
-                </p>
-                <p>
-                  <i class="fa fa-envelope me-2 text-white"></i
-                  ><a href="mailto:ysbuilders075@gmail.com"
-                    >ysbuilders075@gmail.com</a
-                  >
-                </p>
-                <!-- <div class="d-flex justify-content-start mt-4">
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href="#"><i class="fab fa-instagram"></i></a>
-                            </div> -->
-              </div>
-            </div>
+        <h1 class="display-5 text-uppercase text-center mb-4">
+          Latest <span class="text-primary">Our</span> Location
+        </h1>
+        <div
+          class="col-md-12 wow fadeInRight"
+          data-wow-delay="0.1s"
+          style="height: 500px"
+        >
+          <div class="h-100">
+            <iframe
+              class="w-100 h-100"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14132.011192118462!2d85.3131127!3d27.686308400000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb190051f467e9%3A0xca8ced4b8d9d7f1d!2sY.S.%20Builders!5e0!3m2!1sen!2snp!4v1725791136614!5m2!1sen!2snp"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
         </div>
       </div>
     </div>
+    <!-- Location End -->
     <div
       class="container-fluid bg-dark text-white border-top border-primary px-0"
     >
