--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <div
             class="service-item bg-white d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service-1.jpg" alt="" />
+            <img class="img-fluid" src="img/service/services-1.webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-building text-primary"></i>
             </div>
@@ -301,7 +301,7 @@
           <div
             class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service-2.jpg" alt="" />
+            <img class="img-fluid" src="img/service/service-2 .webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-home text-primary"></i>
             </div>
@@ -317,7 +317,7 @@
           <div
             class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service-3.jpg" alt="" />
+            <img class="img-fluid" src="img/service/service-3.webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-drafting-compass text-primary"></i>
             </div>
@@ -333,7 +333,7 @@
           <div
             class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service-4.jpg" alt="" />
+            <img class="img-fluid" src="img/service/service-4.webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-palette text-primary"></i>
             </div>
@@ -349,7 +349,7 @@
           <div
             class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service-5.jpg" alt="" />
+            <img class="img-fluid" src="img/service/services-5.webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-tools text-primary"></i>
             </div>
@@ -365,7 +365,7 @@
           <div
             class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
           >
-            <img class="img-fluid" src="img/service-6.jpg" alt="" />
+            <img class="img-fluid" src="img/service/services-6.webp" alt="" />
             <div class="service-icon bg-white">
               <i class="fa fa-3x fa-paint-brush text-primary"></i>
             </div>
