--- a/service.html
+++ b/service.html
@@ -122,78 +122,102 @@
             <h1 class="display-5 text-uppercase mb-4">We Provide <span class="text-primary">The Best</span> Construction Services</h1>
         </div>
         <div class="row g-5">
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-white d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="img/service-1.jpg" alt="">
-                    <div class="service-icon bg-white">
-                        <i class="fa fa-3x fa-building text-primary"></i>
-                    </div>
-                    <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">Building Construction</h4>
-                        <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
+          <div class="col-lg-4 col-md-6">
+            <div
+              class="service-item bg-white d-flex flex-column align-items-center text-center"
+            >
+              <img class="img-fluid" src="img/service/services-1.webp" alt="" />
+              <div class="service-icon bg-white">
+                <i class="fa fa-3x fa-building text-primary"></i>
+              </div>
+              <div class="px-4 pb-4">
+                <h4 class="text-uppercase mb-3">Building Construction</h4>
+                <a class="btn text-primary" href=""
+                  >Read More <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="img/service-2.jpg" alt="">
-                    <div class="service-icon bg-white">
-                        <i class="fa fa-3x fa-home text-primary"></i>
-                    </div>
-                    <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">House Renovation</h4>
-                        <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div
+              class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
+            >
+              <img class="img-fluid" src="img/service/service-2 .webp" alt="" />
+              <div class="service-icon bg-white">
+                <i class="fa fa-3x fa-home text-primary"></i>
+              </div>
+              <div class="px-4 pb-4">
+                <h4 class="text-uppercase mb-3">House Renovation</h4>
+                <a class="btn text-primary" href=""
+                  >Read More <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="img/service-3.jpg" alt="">
-                    <div class="service-icon bg-white">
-                        <i class="fa fa-3x fa-drafting-compass text-primary"></i>
-                    </div>
-                    <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">Architecture Design</h4>
-                        <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div
+              class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
+            >
+              <img class="img-fluid" src="img/service/service-3.webp" alt="" />
+              <div class="service-icon bg-white">
+                <i class="fa fa-3x fa-drafting-compass text-primary"></i>
+              </div>
+              <div class="px-4 pb-4">
+                <h4 class="text-uppercase mb-3">Architecture Design</h4>
+                <a class="btn text-primary" href=""
+                  >Read More <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="img/service-4.jpg" alt="">
-                    <div class="service-icon bg-white">
-                        <i class="fa fa-3x fa-palette text-primary"></i>
-                    </div>
-                    <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">Interior Design</h4>
-                        <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div
+              class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
+            >
+              <img class="img-fluid" src="img/service/service-4.webp" alt="" />
+              <div class="service-icon bg-white">
+                <i class="fa fa-3x fa-palette text-primary"></i>
+              </div>
+              <div class="px-4 pb-4">
+                <h4 class="text-uppercase mb-3">Interior Design</h4>
+                <a class="btn text-primary" href=""
+                  >Read More <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="img/service-5.jpg" alt="">
-                    <div class="service-icon bg-white">
-                        <i class="fa fa-3x fa-tools text-primary"></i>
-                    </div>
-                    <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">Fixing & Support</h4>
-                        <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div
+              class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
+            >
+              <img class="img-fluid" src="img/service/services-5.webp" alt="" />
+              <div class="service-icon bg-white">
+                <i class="fa fa-3x fa-tools text-primary"></i>
+              </div>
+              <div class="px-4 pb-4">
+                <h4 class="text-uppercase mb-3">Fixing & Support</h4>
+                <a class="btn text-primary" href=""
+                  >Read More <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-white rounded d-flex flex-column align-items-center text-center">
-                    <img class="img-fluid" src="img/service-6.jpg" alt="">
-                    <div class="service-icon bg-white">
-                        <i class="fa fa-3x fa-paint-brush text-primary"></i>
-                    </div>
-                    <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">Painting</h4>
-                        <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div
+              class="service-item bg-white rounded d-flex flex-column align-items-center text-center"
+            >
+              <img class="img-fluid" src="img/service/services-6.webp" alt="" />
+              <div class="service-icon bg-white">
+                <i class="fa fa-3x fa-paint-brush text-primary"></i>
+              </div>
+              <div class="px-4 pb-4">
+                <h4 class="text-uppercase mb-3">Painting</h4>
+                <a class="btn text-primary" href=""
+                  >Read More <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
             </div>
+          </div>
         </div>
     </div>
     <!-- Services End -->
