--- a/about.html
+++ b/about.html
@@ -110,9 +110,9 @@
     <div class="container-fluid page-header">
         <h1 class="display-3 text-uppercase text-white mb-3 wow fadeInUp" data-wow-delay="0.2s">About</h1>
         <div class="d-inline-flex text-white">
-            <h6 class="text-uppercase m-0 wow fadeInUp" data-wow-delay="0.4s"><a href="index.html">Home</a></h6>
+            <h6 class="text-uppercase m-0 wow fadeInLeft" data-wow-delay="0.4s"><a href="index.html">Home</a></h6>
             <h6 class="text-white m-0 px-3 wow fadeInUp" data-wow-delay="0.5s">/</h6>
-            <h6 class="text-uppercase text-white m-0 wow fadeInUp" data-wow-delay="0.6s">About</h6>
+            <h6 class="text-uppercase text-white m-0 wow fadeInRight" data-wow-delay="0.6s">About</h6>
         </div>
     </div>
     <!-- Page Header Start -->
@@ -729,8 +729,8 @@
           Latest <span class="text-primary">Our</span> Location
         </h1>
         <div
-          class="col-md-12 wow fadeInRight"
-          data-wow-delay="0.1s"
+          class="col-md-12 wow fadeInUp"
+          data-wow-delay="0.5s"
           style="height: 500px"
         >
           <div class="h-100">
