--- a/service.html
+++ b/service.html
@@ -20,6 +20,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet" />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
@@ -107,22 +108,22 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header">
-        <h1 class="display-3 text-uppercase text-white mb-3">Service</h1>
-        <div class="d-inline-flex text-white">
-            <h6 class="text-uppercase m-0"><a href="">Home</a></h6>
-            <h6 class="text-white m-0 px-3">/</h6>
-            <h6 class="text-uppercase text-white m-0">Service</h6>
-        </div>
-    </div>
-    <!-- Page Header Start -->
+      <h1 class="display-3 text-uppercase text-white mb-3 wow fadeInUp" data-wow-delay="0.2s">Service</h1>
+      <div class="d-inline-flex text-white">
+          <h6 class="text-uppercase m-0 wow fadeInLeft" data-wow-delay="0.4s"><a href="index.html">Home</a></h6>
+          <h6 class="text-white m-0 px-3 wow fadeInUp" data-wow-delay="0.5s">/</h6>
+          <h6 class="text-uppercase text-white m-0 wow fadeInRight" data-wow-delay="0.6s">Service</h6>
+      </div>
+  </div>
+  <!-- Page Header Start -->
 
     <!-- Services Start -->
     <div class="container-fluid bg-light py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-        <h1 class="display-5 text-uppercase mb-4">We Provide <span class="text-primary">The Best</span> Construction <span class="text-primary">Services</span></h1>
+        <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.5s">We Provide <span class="text-primary">The Best</span> Construction <span class="text-primary">Services</span></h1>
     </div>
       <div class="row g-5">
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
           <div
             class="service-item service-radius bg-yellow d-flex flex-column align-items-center text-center" 
           >
@@ -135,7 +136,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -148,7 +149,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInRight" data-wow-delay="0.8s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -161,7 +162,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -175,7 +176,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -189,7 +190,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInRight" data-wow-delay="0.8s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -209,15 +210,15 @@
 
 
      <!-- Appointment Start -->
-     <div class="container-fluid bg-yellow py-6 px-5">
+    <div class="container-fluid bg-yellow py-6 px-5">
       <div class="row gx-5">
         <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="mb-4">
-            <h1 class="display-5 text-uppercase mb-4">
+            <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
               Get In <span class="text-primary">Touch</span>
             </h1>
           </div>
-          <p class="fs-5 mb-0">
+          <p class="fs-5 mb-0 wow fadeInUp" data-wow-delay="0.5s">
             Building your architectural aspirations, incrementally. Whether you
             are prepared to start on your next significant endeavour or are
             seeking assistance, we are available to provide guidance. Contact us
@@ -225,16 +226,16 @@
             exceptional.
           </p>
           <br />
-          <a class="btn btn-primary py-3 px-5" href="contact.html"
+          <a class="btn btn-primary py-3 px-5 wow fadeInUp" data-wow-delay="0.8s" href="contact.html"
             >Contact Us</a
           >
         </div>
-        <div class="col-lg-8">
+        <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.3s">
           <div class="bg-light text-center p-5">
             <form action="https://api.web3forms.com/submit"
             method="POST">
               <div class="row g-3">
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6 wow fadeInLeft" data-wow-delay="0.6s">
                   <input
                       type="hidden"
                       name="access_key"
@@ -249,7 +250,7 @@
                     style="height: 55px" required
                   />
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6 wow fadeInRight" data-wow-delay="0.6s">
                   <input
                     type="email"
                     id="email"
@@ -259,7 +260,7 @@
                     name="Email Address" required
                   />
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6 wow fadeInLeft" data-wow-delay="0.7s">
                   <input
                     type="text"
                     id="subject"
@@ -269,7 +270,7 @@
                     name="Subject" required
                   />
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6 wow fadeInRight" data-wow-delay="0.7s">
                   <input
                     type="number"
                     id="contact-number"
@@ -280,7 +281,7 @@
                   />
                 </div>
 
-                <div class="col-12">
+                <div class="col-12 wow fadeInUp" data-wow-delay="0.8s">
                   <textarea
                     class="form-control border-0"
                     rows="5"
@@ -294,7 +295,7 @@
                   name="redirect"
                   value="https://www.ysbuilders.com.np/thanks.html"
                 />
-                <div class="h-captcha" data-captcha="true"></div>
+                <div class="h-captcha wow fadeInUp" data-wow-delay="0.8s" data-captcha="true"></div>
                 <input
                   type="checkbox"
                   name="botcheck"
@@ -302,7 +303,7 @@
                   style="display: none"
                 />
                 <div class="col-12">
-                  <button class="btn btn-primary w-100 py-3" type="submit">
+                  <button class="btn btn-primary w-100 py-3 wow fadeInUp" data-wow-delay="0.9s" type="submit">
                     Submit Form
                   </button>
                 </div>
@@ -314,18 +315,18 @@
     </div>
     <!-- Appointment End -->
 
-    <!-- Testimonial Start -->
-    <div class="container-fluid bg-light py-6 px-5">
+     <!-- Testimonial Start -->
+     <div class="container-fluid bg-white py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
-        <h1 class="display-5 text-uppercase mb-4">
+        <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
           What Our <span class="text-primary">Happy Clients</span> Say!!!
         </h1>
       </div>
       <div class="row gx-0 align-items-center">
-        <div class="col-xl-4 col-lg-5 d-none d-lg-block">
+        <div class="col-xl-4 col-lg-5 d-none d-lg-block wow fadeInLeft" data-wow-delay="0.5s">
           <img class="img-fluid w-100 h-100" src="img/testimonial/happy.webp" />
         </div>
-        <div class="col-xl-8 col-lg-7 col-md-12">
+        <div class="col-xl-8 col-lg-7 col-md-12 wow fadeInRight" data-wow-delay="0.7s">
           <div class="testimonial bg-light">
             <div class="owl-carousel testimonial-carousel">
               <div class="row gx-4 align-items-center">
@@ -400,14 +401,14 @@
     <!-- Testimonial End -->
       
     <!-- Location Start -->
-    <div class="container-fluid bg-yellow overflow-hidden py-2 px-lg-0">
+    <div class="container-fluid bg-white overflow-hidden py-1 px-lg-0">
       <div class="row g-5">
-        <h1 class="display-5 text-uppercase text-center mb-4">
+        <h1 class="display-5 text-uppercase text-center mb-4 wow fadeInUp" data-wow-delay="0.3s">
           Latest <span class="text-primary">Our</span> Location
         </h1>
         <div
-          class="col-md-12 wow fadeInRight"
-          data-wow-delay="0.1s"
+          class="col-md-12 wow fadeInUp"
+          data-wow-delay="0.5s"
           style="height: 500px"
         >
           <div class="h-100">
@@ -521,6 +522,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/tempusdominus/js/moment.min.js"></script>
